apps/audiobookshelf/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: audiobookshelf
  labels:
    app.kubernetes.io/name: audiobookshelf
