apps/audiobookshelf/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: audiobookshelf
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`audiobookshelf.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: audiobookshelf
          port: 80
  tls:
    secretName: audiobookshelf-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf-http
  namespace: audiobookshelf
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`audiobookshelf.lab.jackhumes.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: audiobookshelf
          port: 80
